Fix margin of richtext focus menu on mobile.

--- a/static/less/richtext.less
+++ b/static/less/richtext.less
@@ -662,4 +662,10 @@
             margin-top: 0;
         }
     }
+
+    .ProsemirrorEditor.focusMenu {
+        .humhub-ui-richtext {
+            margin-top: 0;
+        }
+    }
 }
